--- a/tasks/config/tasks.cfg
+++ b/tasks/config/tasks.cfg
@@ -2,12 +2,12 @@
 
 [tasks]
 logenabled = True
-logfilename = /tmp/logs/tasks.log
+logfilename = /tmp/tasks.log
 loglevel = DEBUG
 # DEBUG , INFO, WARNING, ERROR, CRITICAL
 
 [work]
 logenabled = True
-logfilename = /tmp/logs/tasks.log
+logfilename = /tmp/tasks.log
 loglevel = DEBUG
 # DEBUG , INFO, WARNING, ERROR, CRITICAL
